--- a/website/doudizhuClient/index.html
+++ b/website/doudizhuClient/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>游戏大厅</title>
-    <script type="text/javascript" src="ResourceData.js" ></script>
-    <script type="text/javascript" src="Prototype.js" ></script>
-    <script type="text/javascript" src="JControls.js" ></script>
-    <script type="text/javascript" src="DJDDZ.js" ></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <title>doudizhu</title> -->
+    <link rel="stylesheet" type="text/css" href="css/doudizhu.css">
+    <script type="text/javascript" src="ResourceData.js"></script>
+    <script type="text/javascript" src="Prototype.js"></script>
+    <script type="text/javascript" src="JControls.js"></script>
+    <script type="text/javascript" src="DJDDZ.js"></script>
 </head>
+
 <body>
-<canvas id="canvas1"></canvas>
-<script type="text/javascript">
-    DJDDZ.Init("canvas1");
-</script>
+    <canvas id="canvas1"></canvas>
+    <script type="text/javascript">
+        DJDDZ.Init("canvas1");
+    </script>
 </body>
+
 </html>
