--- a/website/doudizhuClient/index.html
+++ b/website/doudizhuClient/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <title>doudizhu</title> -->
     <link rel="stylesheet" type="text/css" href="css/doudizhu.css">
+    <script type="text/javascript" src="../js/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="../js/base.js"></script>
+    <script type="text/javascript" src="../js/pxmu.min.js"></script>
+    <script type="text/javascript" src="doudizhu.js"></script>
     <script type="text/javascript" src="ResourceData.js"></script>
     <script type="text/javascript" src="Prototype.js"></script>
     <script type="text/javascript" src="JControls.js"></script>
@@ -16,7 +20,14 @@
 <body>
     <canvas id="canvas1"></canvas>
     <script type="text/javascript">
-        DJDDZ.Init("canvas1");
+        let token = getCookie("token");
+        if (token != "")
+        {
+            readyGame(token);
+            DJDDZ.Init("canvas1");
+        }
+        else
+            window.location.replace("http://192.168.0.212/web/index.html");
     </script>
 </body>
 
