--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <script type="text/javascript" src="js/jquery-3.6.0.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/pxmu@1.1.0/dist/web/pxmu.min.js"></script>
+    <script type="text/javascript" src="js/pxmu.min.js"></script>
+    <script src="js/base.js"></script>
     <script src="js/login.js"></script>
 </head>
 
