--- a/website/index.html
+++ b/website/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="js/pxmu.min.js"></script>
     <script src="js/base.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/signalr.js"></script>
 </head>
 
 <body>
