--- a/index.html
+++ b/index.html
@@ -75,3 +75,5 @@
 </body>
 
 </html>
+
+<!-- "C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe" --disable-web-security --user-data-dir=E:\IDE\17006 -->
